--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
 	  "styles",
 	  "inline-styles"
 	],
-	"author": "nmanthena"
+	"author": "nmanthena",
+	"license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nmanthena18/eslint-no-inline-styles.git"
+  }
 }
